--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=movie-inventory-service
+spring.datasource.url=jdbc:mysql://localhost:3306/my_test
+
+spring.datasource.username=root
+spring.datasource.password=Babana@12345
+
+# create and drop table, good for testing, production set to none or comment it
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
